// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paragraph.md with options: {"text":false}: paragraph.md 1`] = `
段落lol。
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
段落lol。

`;

exports[`paragraph.md with options: undefined: paragraph.md 1`] = `
段落lol。
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
段落 lol。

`;
